--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   -->
   <link rel="preload" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" as="image" href="./assets/images/hero-banner-bg.png">
+  <link rel="stylesheet" href="assets/css/style.css">
+
 
 </head>
 
@@ -604,6 +606,7 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="assets/js/script.js"></script>
 
 </body>
 
